--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -92,6 +92,7 @@ body {
 
 .cartao .informacoes .nome {
   color: #000;
+  text-shadow: #ffd700 2px 3px 2px;
   font-size: 20px;
 }
 
@@ -120,7 +121,8 @@ body {
 
 .cartao .descricao .titulo {
   background-color: rgba(107, 106, 110, 0.7);
-  color: #000;
+  color: #f1ecff;
+  text-shadow: #ffd700 2px 3px 2px;
   font-size: 17px;
   padding: 12px;
 }
