--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -120,11 +120,11 @@ body {
 }
 
 .cartao .descricao .titulo {
-  background-color: rgba(107, 106, 110, 0.7);
   color: #f1ecff;
-  text-shadow: #ffd700 2px 3px 2px;
+  text-shadow: #ffd700 2px 2px 2px;
   font-size: 17px;
   padding: 12px;
+  background: #333;
 }
 
 .cartao .descricao .texto {
@@ -134,4 +134,10 @@ body {
   max-height: 115px;
   overflow-y: auto;
   color: #000;
+}
+
+footer address {
+  text-align: center;
+  color: #f1ecff;
+  margin-bottom: 10px;
 }
